samples/_failures_safe/1761193579_c159f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_73ad2c07.c: In function ‘main’:
./samples/SAFE/__tmp_73ad2c07.c:146: error: expected ‘]’ at end of input
./samples/SAFE/__tmp_73ad2c07.c:145:5: error: expected declaration or statement at end of input
  145 |     uint8_t decompressed_data[MAX_INPUT
      |     ^~~~~~~
